exports[`(.not).toHaveNotModifiedStatus > using axios > .not.toHaveNotModifiedStatus > fails when response have status code 304 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotModifiedStatus()</intensity>

Expected status code to not be 304 received:
  <red>304</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 304,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": ""
}
`;

exports[`(.not).toHaveNotModifiedStatus > using axios > .toHaveNotModifiedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotModifiedStatus()</intensity>

Expected status code to be 304 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
